--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,5 +1,13 @@
-.littleCircle1 {
+.littleInCircle2 path {
     fill: red;
-    stroke: red;
+    stroke-width: 5px;
     background: red;
+}
+
+.TA {
+    color: red;
+}
+
+.TS {
+    color: red;
 }
